Finishing up validation and adding order number.

--- a/src/AppBundle/Resources/views/Admin/approve_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/approve_order.html.twig
@@ -152,7 +152,7 @@
                                         <a class="btn btn-lg btn-default"
                                            href="{{ path('admin_order_edit', {'cart_id': cart.id}) }}"><i
                                                     class="fa fa-arrow-left"></i>
-                                            Edit Order
+                                            Re-open & Edit Order
                                         </a>
                                         <a class="btn btn-lg btn-info hidden-print" onclick="window.print();">Print</a>
                                     </div>
