--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -402,6 +402,23 @@
                 });
             };
 
+            $scope.updateShipping = function () {
+                var id = $("#shipping").val();
+                console.log('id: ' + id);
+                $.ajax({
+                    type: 'POST',
+                    url: "{{ path('admin_update_shipping') }}",
+                    data: {cart_id: {{ cart_id }}, ship_id: id},
+                    dataType: 'json',
+                    success: function () {
+
+                    },
+                    error: function (data) {
+                        console.log(data);
+                    }
+                });
+            };
+
             $scope.updateProduct = function (item) {
                 $.ajax({
                     type: 'POST',
