Finishing up validation and adding order number.

--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -131,6 +131,9 @@
                                             NUMBER OF ITEMS
                                         </th>
                                         <th>
+                                            ORDER #
+                                        </th>
+                                        <th>
                                         </th>
                                     </tr>
                                     </thead>
@@ -150,6 +153,9 @@
                                                 <center>
                                                     {{ item.items }}
                                                 </center>
+                                            </td>
+                                            <td>
+                                                <center>{{ item.order_number }}</center>
                                             </td>
                                             <td style="width: 60px;">
                                                 <a href="{{ path('admin_order_edit', {'cart_id': item.id}) }}"
