--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -217,7 +217,7 @@
                                     {% for item in approved %}
                                         <tr>
                                             <td>
-                                                {{ item.submit_date | date('m/d/y   h:i A') }}
+                                                {{ (item.approve_date ? item.approve_date : ' ') | date('m/d/y   h:i A') }}
                                             </td>
                                             <td>
                                                 {{ item.office_name ? item.office_name : ' ' }}
