--- a/src/AppBundle/Resources/views/Admin/review_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_order.html.twig
@@ -38,12 +38,12 @@
                                     <th>DESCRIPTION</th>
                                     <th>RETURN</th>
                                     <th>LINE NUMBER (S)</th>
-                                    <th>Stock Location</th>
+                                    <th>STOCK LOCATION</th>
                                     <th>PREFIX</th>
                                     <th>QTY</th>
                                     <th>SHIP QTY</th>
                                     <th>B.O. QTY</th>
-                                    <th>Uster Notes</th>
+                                    <th>USTER NOTES</th>
                                 </tr>
                                 </thead>
                                 <tbody>
