--- a/src/AppBundle/Resources/views/Email/order_approved_notification.html.twig
+++ b/src/AppBundle/Resources/views/Email/order_approved_notification.html.twig
@@ -1,9 +1,9 @@
 <p>Hello!</p>
-<p>A new order has been submitted from the {{ cart.office.name }} office</p>
-<h2>Order #{{ cart.orderNumber }}</h2>
+<p>Order number #{{ cart.orderNumber }} has been fulfilled. Please login to www.utus-orders.com to review your order
+    details.</p>
 {# example, assuming you have a route named "login" #}
 <br>
-<a class="btn btn-success" href="{{ url('admin_order_edit', { 'cart_id': cart.id }) }}">View/Approve Order</a>
+<a class="btn btn-success" href="http://www.utus-orders.com">View/Approve Order</a>
 <br>
 
 <p>
