--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -16,6 +16,7 @@
             }
         }
     </style>
+
 {% endblock page_title %}
 
 {% block page_name  %}
@@ -23,6 +24,7 @@
 {% endblock page_name %}
 
 {% block content %}
+
     <div class="row" style="margin-left: 0px; margin-right: 0px;">
         <div class="row stats-overview-cont">
             <div class="col-md-3">
@@ -186,12 +188,15 @@
                     </div>
                     <div class="portlet-body">
                         <div class="table-scrollable">
-                            <table class="table table-striped table-bordered table-hover">
+                            <table id="recently-approved" class="table table-striped table-bordered table-hover">
                                 {% if approved %}
                                     <thead>
                                     <tr>
                                         <th>
                                             DATE APPROVED
+                                        </th>
+                                        <th>
+                                            DATE SUBMITTED
                                         </th>
                                         <th>
                                             OFFICE
@@ -218,6 +223,9 @@
                                         <tr>
                                             <td>
                                                 {{ (item.approve_date ? item.approve_date : ' ') | date('m/d/y   h:i A') }}
+                                            </td>
+                                            <td>
+                                                {{ (item.submit_date ? item.submit_date : ' ') | date('m/d/y   h:i A') }}
                                             </td>
                                             <td>
                                                 {{ item.office_name ? item.office_name : ' ' }}
@@ -256,3 +264,7 @@
     </div>
     </div>
 {% endblock content %}
+
+{% block footer %}
+
+{% endblock footer %}
