--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -199,7 +199,7 @@
         {% endif %}
         <!-- BEGIN CONTENT -->
         <div class="page-content-wrapper">
-            <div class="page-content">
+            <div class="page-content clearfix">
                 <!-- BEGIN SAMPLE PORTLET CONFIGURATION MODAL FORM-->
                 <div class="modal fade" id="portlet-config" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
