--- a/src/AppBundle/Resources/views/StockLocation/edit.html.twig
+++ b/src/AppBundle/Resources/views/StockLocation/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends ":template:layout.html.twig" %}
 
-{% block title %}Edit Part Category{% endblock %}
+{% block title %}Edit Stock Location{% endblock %}
 
 {% block page_title %}
-    Edit Part Category
+    Edit Stock Location
 {% endblock page_title %}
 
 {% block page_name %}
-    <a href="{{ path('admin_partcategory_index') }}"><i class="fa fa-angle-left"></i>Back to the list</a>
+    <a href="{{ path('admin_stocklocation_index') }}"><i class="fa fa-angle-left"></i>Back to the list</a>
 {% endblock page_name %}
 
 {% block content %}
