--- a/src/AppBundle/Resources/views/StockLocation/index.html.twig
+++ b/src/AppBundle/Resources/views/StockLocation/index.html.twig
@@ -1,20 +1,20 @@
 {% extends ":template:layout.html.twig" %}
 
-{% block title %}Part Categories{% endblock %}
+{% block title %}Stock Locations{% endblock %}
 
 {% block page_title %}
-    Part Categories
+    Stock Locations
 {% endblock page_title %}
 
 {% block page_name %}
-    Part Categories
+    Stock Locations
 {% endblock page_name %}
 
 {% block content %}
     <div class="row">
         <div class="col-md-10">
             <button class="btn btn-success" style="margin-bottom: 15px;">
-                <a href="{{ path('admin_partcategory_new') }}">Create a new entry</a>
+                <a href="{{ path('admin_stocklocation_new') }}">Create a new entry</a>
             </button>
             <div class="table">
                 <table id="part-table" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -25,13 +25,13 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for partCategory in partCategories %}
+                    {% for stockLocation in stockLocations %}
                         <tr>
-                            <td>{{ partCategory.name }}</td>
+                            <td>{{ stockLocation.name }}</td>
                             <td>
                                 <ul>
                                     <a class="btn btn-default btn-xs purple"
-                                       href="{{ path('admin_partcategory_edit', { 'id': partCategory.id }) }}"><i
+                                       href="{{ path('admin_stocklocation_edit', { 'id': stockLocation.id }) }}"><i
                                                 class="fa fa-edit"></i> edit</a>
                                 </ul>
                             </td>
