#2 Double Check how I did it in GroupController!

--- a/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
+++ b/src/AppBundle/Resources/views/Admin/admin_edit_user.html.twig
@@ -26,6 +26,7 @@
     <div class="container">
         <div class="portlet-body form">
             <div class="form-body">
+                {{ password }} sdf
                 {{ form_start(form, { 'action': path('admin_edit_user', { 'user_id': user_id }), 'attr': { 'class': 'form-group' } }) }}
                 <h3 class="form-section">Edit Employee Info</h3>
                 <div class="row">
