--- a/src/AppBundle/Resources/views/Group/edit_content.html.twig
+++ b/src/AppBundle/Resources/views/Group/edit_content.html.twig
@@ -96,6 +96,8 @@
                 </div>
                 <div style="padding-top: 20px;">
                     <input class="btn btn-success" type="submit" value="{{ 'profile.edit.submit'|trans }}"/>
+                    <a class="btn btn-warning" onclick="return confirm('Are you sure you want to delete this item?');"
+                       href="{{ path('fos_user_group_delete', {'groupName': group_name} ) }}">Delete {{ group_name }}</a>
                 </div>
 
                 {{ form_end(form) }}
