--- a/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
@@ -1,5 +1,5 @@
 {% extends ":template:layout.html.twig" %}
-{% block title %}All Orders{% endblock title %}
+{% block title %}Welcome{% endblock title %}
 
 {% block page_title %}
 
