--- a/src/AppBundle/Resources/views/Cart/review-order.html.twig
+++ b/src/AppBundle/Resources/views/Cart/review-order.html.twig
@@ -176,8 +176,9 @@
                 beforeSend: function () {
                     console.log('json load cart');
                 },
-                type: 'GET',
+                type: 'POST',
                 url: "{{ path('api_load_cart') }}",
+                data: {option: "{{ cart.type }}"},
                 success: function (data) {
                     $scope.$apply(function () {
                         $scope.cart = data.cart;
