--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -109,6 +109,80 @@
         <div class="row ">
             <div class="col-md-12">
                 <div class="portlet">
+                    <div class="portlet-title" style="background-color: #fcf8e3 !important;">
+                        <div class="caption">
+                            <i class="fa fa-bell"></i>COLORHEAD ORDERS TO BE APPROVED
+                        </div>
+                    </div>
+                    <div class="portlet-body">
+                        <div class="table-scrollable">
+                            <table class="table table-striped table-bordered table-hover">
+                                {% if submitted %}
+                                    <thead>
+                                    <tr>
+                                        <th>
+                                            DATE SUBMITTED
+                                        </th>
+                                        <th>
+                                            OFFICE
+                                        </th>
+                                        <th>
+                                            SUBMITTED BY
+                                        </th>
+                                        <th>
+                                            NUMBER OF ITEMS
+                                        </th>
+                                        <th>
+                                            ORDER #
+                                        </th>
+                                        <th>
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for item in submitted_colorhead %}
+                                        <tr>
+                                            <td>
+                                                {{ item.submit_date | date('m/d/y   h:i A') }}
+                                            </td>
+                                            <td>
+                                                {{ item.office_name ? item.office_name : ' ' }}
+                                            </td>
+                                            <td>
+                                                {{ item.submitted_by ? item.submitted_by : ' ' }}
+                                            </td>
+                                            <td>
+                                                <center>
+                                                    {{ item.items }}
+                                                </center>
+                                            </td>
+                                            <td>
+                                                <center>{{ item.order_number }}</center>
+                                            </td>
+                                            <td style="width: 60px;">
+                                                <a href="{{ path('admin_order_edit', {'cart_id': item.id}) }}"
+                                                   class="btn btn-danger btn-xs">Approve</a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                {% else %}
+                                    <div style="padding: 10px;">
+                                        <center><h4>There are no submitted orders that need to be reviewed.</h4>
+                                        </center>
+                                    </div>
+                                {% endif %}
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row ">
+            <div class="col-md-12">
+                <div class="portlet">
                     <div class="portlet-title" style="background-color: #f2dede !important;">
                         <div class="caption">
                             <i class="fa fa-bell"></i>SUBMITTED ORDERS TO BE APPROVED
