--- a/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home-cart-selection.html.twig
@@ -38,7 +38,7 @@
     <div class="row" style="margin-bottom: 30px;">
         <div class="col-md-12">
             <center>
-                <a class="btn btn-lg btn-default" href="/">
+                <a class="btn btn-lg btn-default" href="{{ path('user_home') }}">
                     View Outstanding Orders
                 </a>
             </center>
