--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -206,7 +206,7 @@
                                              </center>
                                              </div>
                                              <div class="col-md-4">
-                                                <button ng-if="{{option}} != 'colorhead'" ng-click="addItem(item.id)" style="background: transparent; border: none;">
+                                                <button  ng-click="addItem(item.id)" style="background: transparent; border: none;">
                                                     <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
                                               </div>
