--- a/src/AppBundle/Resources/views/Cart/review-order.html.twig
+++ b/src/AppBundle/Resources/views/Cart/review-order.html.twig
@@ -109,9 +109,7 @@
                         </div>
                     </div>
                     <div class="row" style="padding-bottom: 25px;">
-                        <div class="col-xs-4">
-                        </div>
-                        <div class="col-xs-6 invoice-block">
+                        <div class="col-xs-10 col-xs-offset-2 invoice-block">
                             <br/>
                             <button class="btn btn-lg btn-default" onclick="goBack()"><i class="fa fa-arrow-left"></i>
                                 Back To Order Screen
