--- a/src/AppBundle/Resources/views/Cart/submit-colorhead.html.twig
+++ b/src/AppBundle/Resources/views/Cart/submit-colorhead.html.twig
@@ -27,7 +27,7 @@
                 <div class="details">
 
                     <div class="numbers">
-                        COLOHEAD ORDER SUBMITTED SUCCESSFULLY
+                        COLORHEAD ORDER SUBMITTED SUCCESSFULLY
                     </div>
                     <hr>
                     <div class="title"
