--- a/src/AppBundle/Resources/views/Email/order_approved_notification.html.twig
+++ b/src/AppBundle/Resources/views/Email/order_approved_notification.html.twig
@@ -1,9 +1,9 @@
 <p>Hello!</p>
-<p>Order number #{{ cart.orderNumber }} has been fulfilled. Please login to www.utus-orders.com to review your order
+<p>Order number #{{ cart.orderNumber }} has been fulfilled. Please login to utus-orders.com to review your order
     details.</p>
 {# example, assuming you have a route named "login" #}
 <br>
-<a class="btn btn-success" href="http://www.utus-orders.com">View/Approve Order</a>
+<a class="btn btn-success" href="http://utus-orders.com">View/Approve Order</a>
 <br>
 
 <p>
