--- a/src/AppBundle/Resources/views/Group/edit_content.html.twig
+++ b/src/AppBundle/Resources/views/Group/edit_content.html.twig
@@ -11,6 +11,8 @@
                 {{ form_errors(form.state) }}
                 {{ form_errors(form.zip) }}
                 {{ form_errors(form.phone) }}
+                {{ form_errors(form.starting_order_number) }}
+                {{ form_errors(form.shipToAccountNumber) }}
             </div>
         </div>
     </div>
@@ -69,11 +71,15 @@
                         {{ form_label(form.name) }}
                         {{ form_widget(form.name , { 'attr': {'class': 'form-control'} }) }}
                         {{ form_label(form.phone) }}
-                        {{ form_widget(form.phone , { 'attr': {'class': 'form-control'} }) }}
+                        {{ form_widget(form.phone, { 'attr': {'class': 'form-control'} }) }}
+                        {{ form_label(form.shipToAccountNumber) }}
+                        {{ form_widget(form.shipToAccountNumber, { 'attr': {'class': 'form-control'} }) }}
                     </div>
                     <div class="col-md-6">
                         {{ form_label(form.office_number) }}
                         {{ form_widget(form.office_number , { 'attr': {'class': 'form-control'} }) }}
+                        {{ form_label(form.starting_order_number) }}
+                        {{ form_widget(form.starting_order_number , { 'attr': {'class': 'form-control'} }) }}
                     </div>
                 </div>
                 <h3 class="form-section">Office Address</h3>
