--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -22,6 +22,17 @@
     Dashboard
 {% endblock page_name %}
 
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        $(function () {
+            $('a.btn-remove-cart').on('click', function () {
+                return confirm('Are you sure you want to delete this order?');
+            });
+        })
+    </script>
+{% endblock %}
+
 {% block content %}
     <div class="row" style="margin-left: 0px; margin-right: 0px;">
         <div class="row stats-overview-cont">
@@ -159,7 +170,9 @@
                                             </td>
                                             <td style="width: 60px;">
                                                 <a href="{{ path('admin_order_edit', {'cart_id': item.id}) }}"
-                                                   class="btn btn-danger btn-xs">Approve</a>
+                                                   class="btn btn-info btn-xs">Approve</a>
+                                                <a href="{{ path('admin_order_delete', {'id': item.id}) }}"
+                                                   class="btn-remove-cart btn btn-danger btn-xs">Remove</a>
                                             </td>
                                         </tr>
                                     {% endfor %}
