--- a/app/Resources/views/template/layout.html.twig
+++ b/app/Resources/views/template/layout.html.twig
@@ -256,7 +256,7 @@
     <!-- END CONTAINER -->
     <div class="footer">
         <div class="footer-inner">
-            <a href="https://github.com/HuddleHouse">2016 Matt Huddleston</a>
+            &copy; 2016 Uster<sup>&reg;</sup></a>
         </div>
         <div class="footer-tools">
 		<span class="go-top">
