--- a/src/AppBundle/Resources/views/Admin/view_users.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_users.html.twig
@@ -10,6 +10,9 @@ All Registered Users
 {% endblock page_name %}
 
 {% block actions %}
+    <a class="btn btn-primary btn-m purple"
+       href="{{ path('admin_add_user') }}"><i
+                class="fa fa-plus"></i> Add User</a>
 {% endblock actions %}
 
 {% block content %}
@@ -54,13 +57,12 @@ All Registered Users
                             {{ user.lastLogin |date("F jS \\a\\t g:ia") }}
                         </td>
                         <td>
-                            <a class="btn btn-default btn-xs purple"
+                            <a class="btn btn-info btn-xs"
                                href="{{ path('admin_edit_user', {'user_id': user.id}) }}"><i
-                                        class="fa fa-edit"></i> edit</a>
-                            <button class="btn btn-default btn-xs purple"
-                                    onclick="removeUser({{ user.id }})"><i
-                                        class="fa fa-trash"></i> delete
-                            </button>
+                                        class="fa fa-edit"></i> Edit</a>
+                            <!-- <a class="btn btn-danger btn-xs" data-role="delete-user"
+                               href="{{ path('admin_delete_user', {'id': user.id}) }}"><i
+                                        class="fa fa-remove"></i> Delete</a> -->
                         </td>
                     </tr>
                 {% endfor %}
@@ -73,6 +75,12 @@ All Registered Users
 {% block footer %}
     <script>
         $(document).ready(function () {
+            $('#part-table').DataTable();
+
+            $('a.btn[data-role="delete-user"]').on('click', function (e) {
+                return confirm("Are you sure you want to delete this user?");
+            });
+       });
             $('#part-table').DataTable({
                 "paging": false
             });
