--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -466,3 +466,7 @@ table.dataTable.dtr-inline.collapsed > tbody > tr > td:first-child, table.dataTa
 #welcome-message:hover {
     background-color: #fff;
 }
+
+.header {
+    box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12) !important;
+}
