--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -204,7 +204,7 @@
                                              </center>
                                              </div>
                                              <div class="col-md-4">
-                                                <button ng-click="upQuantity(item.id)" style="background: transparent; border: none;">
+                                                <button ng-if="option != 'colorhead'" ng-click="upQuantity(item.id)" style="background: transparent; border: none;">
                                                     <i class="fa fa-plus" style="font-size: 20px;color: #e2001a;"></i>
                                                 </button>
                                               </div>
@@ -420,7 +420,7 @@
             $scope.products = [];
             $scope.shipping = '0';
             $scope.numItems = 0;
-            var option = "{{ option }}";
+            $scope.option = "{{ option }}";
 
             function updateCart(data) {
                 $scope.$apply(function () {
