--- a/src/AppBundle/Resources/views/Cart/home.html.twig
+++ b/src/AppBundle/Resources/views/Cart/home.html.twig
@@ -472,7 +472,10 @@
             };
 
             $scope.addItem = function (item) {
-                $.post("{{ path('api_add_item') }}", {part: item}).done(updateCart);
+                $.post("{{ path('api_add_item') }}", {part: item}).done(function (data) {
+                    updateCart(data);
+                    console.log(data)
+                });
             };
 
             $scope.addLineNumber = function (item) {
